Add PostgreSQL datasource configuration to application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://db:5432/customer
+    url: jdbc:postgresql://localhost:5432/customer
     username: krishna
     password: admin
   jpa:
